# Verifiable-Agent-Kernel-VAK-

./: .dockerignore  .gitignore  AGENTS_README.md  AI Kernel Gap Analysis & Roadmap.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  deny.toml  docker-compose.yml  githubissues.md  plan-vakImplementation.prompt.md  pyproject.toml  requirements.txt  rust-toolchain.toml  tarpaulin.toml
.github/agents/: 00-orchestrator.agent.md  Audit Agent.agent.md  Build Agent.agent.md  CI_CD Agent.agent.md  Documentation Agent.agent.md  Memory and Provenance Agent.agent.md  Neuro-Symbolic Reasoning Agent.agent.md  Policy Engine Agent.agent.md  Python SDK Agent.agent.md  Rust Code Generator Agent.agent.md  Unit Test Agent.agent.md  VAK Github Agents.github.md  VAK Project Context Agent.agent.md  WASM Sandbox Agent.agent.md  ci-cd.agent.md  dev.agent.md  docs.agent.md  qa.agent.md  reviewer.agent.md  security.agent.md
.github/skills/: README.md
.github/skills/calculator/: Cargo.toml  SKILL.md
.github/skills/calculator/src/: lib.rs
.github/skills/crypto-hash/: Cargo.toml  SKILL.md
.github/skills/crypto-hash/src/: lib.rs
.github/skills/docs/: SKILL.md
.github/skills/json-validator/: Cargo.toml  SKILL.md
.github/skills/json-validator/src/: lib.rs
.github/skills/regex-matcher/: Cargo.toml  SKILL.md
.github/skills/regex-matcher/src/: lib.rs
.github/skills/release/: SKILL.md
.github/skills/review/: SKILL.md
.github/skills/security/: SKILL.md
.github/skills/test/: SKILL.md
.github/skills/text-analyzer/: Cargo.toml  SKILL.md
.github/skills/text-analyzer/src/: lib.rs
.github/skills/vak-audit/: SKILL.md  audit.py
.github/skills/vak-execute/: SKILL.md  execute.py
.github/skills/vak-manage/: SKILL.md  manage.py
.github/skills/vak-policy/: SKILL.md  check_policy.py  vak_config.yaml
.github/workflows/: ci.yml  security.yml
agents/development/: crypto_memory_agent.yaml  kernel_core_agent.yaml  neurosymbolic_agent.yaml  policy_engine_agent.yaml  python_sdk_agent.yaml  testing_agent.yaml  wasm_sandbox_agent.yaml
agents/runtime/: audit_logging_agent.yaml  formal_verification_agent.yaml  policy_enforcement_agent.yaml  prm_scoring_agent.yaml  state_manager_agent.yaml  swarm_consensus_agent.yaml
benches/: audit_benchmarks.rs  kernel_benchmarks.rs
config/: agent_registry.yaml
docs/: blue-ocean-opportunity.md  gap-analysis-roadmap.md  project-feasibility.md  python-sdk.md  todo-bindings.md
examples/: CODE_AUDITOR_README.md  basic_agent.rs  code_auditor_demo.rs  code_auditor_python.py  llm_project_example.py  policy_demo.rs  python_quickstart.py
helm/vak/: .helmignore  Chart.yaml  values.yaml
instructions/: code_generation.instructions.yaml  global.instructions.yaml  policy_authoring.instructions.yaml  safety.instructions.yaml
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
policies/: agent_system_policies.yaml  api_external_policies.yaml  default_policies.yaml
policies/admin/: admin_policies.yaml
policies/code_auditor/: code_auditor_constraints.yaml  code_auditor_policies.yaml
policies/data/: data_access_policies.yaml
policies/finance/: finance_policies.yaml
policies/tests/: policy_test_cases.yaml  sample_constraints.yaml
prompts/: code_generation.prompts.yaml  multi_agent.prompts.yaml  policy_audit.prompts.yaml  reasoning_verification.prompts.yaml
protocols/: inter_agent_protocol.yaml  kernel_api.yaml
python/tests/: __init__.py  test_audit_chain.py  test_code_auditor.py  test_integration.py  test_kernel.py  test_memory.py  test_swarm.py  test_types.py
python/vak/: __init__.py  _stub.py  _vak_native.pyi  _version.py  agent.py  audit.py  config.py  exceptions.py  kernel.py  memory.py  policy.py  reasoner.py  skills.py  swarm.py  tools.py  types.py
scripts/: perf-profile.sh
skills/: README.md
skills/docs/: SKILL.md
skills/release/: SKILL.md
skills/review/: SKILL.md
skills/security/: SKILL.md
src/: lib.rs  lib_integration.rs  prelude.rs  python.rs  secrets.rs
src/api/: a2a.rs  mod.rs
src/audit/: backend.rs  error.rs  file.rs  flight_recorder.rs  graphql.rs  logger.rs  memory.rs  mod.rs  multi_region.rs  otel.rs  replay.rs  s3_backend.rs  signing.rs  sqlite.rs  streaming.rs  types.rs
src/dashboard/: component.html  cost_accounting.rs  dashboard.html  health.rs  metrics.rs  mod.rs  server.rs
src/integrations/: autogpt.rs  common.rs  langchain.rs  mcp.rs  mod.rs
src/kernel/: async_pipeline.rs  config.rs  constitution.rs  custom_handlers.rs  error.rs  kernel.rs  mod.rs  neurosymbolic_pipeline.rs  rate_limiter.rs  traits.rs  types.rs
src/llm/: constrained.rs  litellm.rs  mock.rs  mod.rs  traits.rs
src/memory/: content_addressable.rs  episodic.rs  ipfs.rs  knowledge_graph.rs  merkle_dag.rs  migrations.rs  mod.rs  receipts.rs  secret_scrubber.rs  snapshot_backend.rs  sparse_merkle.rs  storage.rs  time_travel.rs  vector_store.rs  working.rs
src/policy/: analyzer.rs  context.rs  context_integration.rs  enforcer.rs  hot_reload.rs  mod.rs  schema.cedarschema
src/reasoner/: analyzer.rs  constrained.rs  constrained_decoding.rs  datalog.rs  hybrid_loop.rs  mod.rs  prm.rs  prm_gating.rs  prm_toolkit.rs  prompt_injection.rs  tree_search.rs  verification_gateway.rs  verifier.rs  z3_verifier.rs  zk_proof.rs
src/sandbox/: async_host.rs  epoch_config.rs  epoch_ticker.rs  host_funcs.rs  marketplace.rs  mod.rs  pooling.rs  reasoning_host.rs  registry.rs  verified_publisher.rs
src/swarm/: a2a.rs  consensus.rs  messages.rs  mod.rs  router.rs  sycophancy.rs  voting.rs
src/tools/: mod.rs  skill_sign.rs
tests/: integration_root.rs  property_tests.rs
tests/integration/: mod.rs  preemption_tests.rs  test_audit_integrity.rs  test_cedar_policy.rs  test_cross_module.rs  test_full_workflow.rs  test_kernel_workflow.rs  test_memory_containment.rs  test_policy_enforcement.rs  test_policy_verification.rs  test_python_sdk.rs  test_stress.rs
(+13 files in other folders)
