[workspace]
members = [
    ".github/skills/calculator",
    ".github/skills/crypto-hash",
    ".github/skills/json-validator",
    ".github/skills/text-analyzer",
    ".github/skills/regex-matcher",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["VAK Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vak-project/verifiable-agent-kernel"
description = "Verifiable Agent Kernel - A secure, auditable AI agent execution environment"
keywords = ["ai", "agents", "kernel", "verification", "security"]
categories = ["development-tools", "asynchronous"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Cryptography and hashing
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# Database (Issue #4)
rusqlite = { version = "0.32", features = ["bundled"] }

# WASM runtime
wasmtime = "41.0.3"

# Identifiers
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }

# Pattern matching
glob = "0.3"

# Base64 encoding
base64 = "0.22"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Lock-free atomic pointer for policy hot-reload (POL-006)
arc-swap = "1.7"

# Merkle tree implementation (MEM-001)
rs_merkle = "1.5"

# HTTP client (using rustls for TLS to avoid system OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Streaming
futures = "0.3"
tokio-stream = "0.1"

# Configuration
config = "0.14"

# Regex for pattern matching
regex = "1.10"

# Graph data structure for knowledge graphs
petgraph = "0.6"

# Python bindings
pyo3 = { version = "0.24.1", features = ["extension-module"] }

# Compression
flate2 = "1.0"

# Temporary files
tempfile = "3.10"

# Testing
proptest = "1.4"
criterion = "0.5"

[package]
name = "vak"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
rusqlite.workspace = true
uuid.workspace = true
chrono.workspace = true
config.workspace = true
wasmtime.workspace = true
serde_yaml.workspace = true
reqwest.workspace = true
futures.workspace = true
tokio-stream.workspace = true
glob.workspace = true
regex.workspace = true
petgraph.workspace = true
flate2.workspace = true
tempfile.workspace = true
base64.workspace = true
arc-swap.workspace = true
rs_merkle.workspace = true

# Optional Python bindings
pyo3 = { workspace = true, optional = true }

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
tokio-test = "0.4"

[[bench]]
name = "kernel_benchmarks"
harness = false

[[bench]]
name = "audit_benchmarks"
harness = false

# Build profiles
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
strip = "none"

# Profile for faster builds during development
[profile.dev.package."*"]
opt-level = 2

# Custom profile for WASM skill builds - optimized for size
[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
