[package]
name = "calculator"
version = "0.1.0"
edition = "2021"
description = "A simple calculator skill for VAK demonstrating the skill interface pattern"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Minimal JSON parsing without std
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = []

