[package]
name = "crypto-hash"
version = "0.1.0"
edition = "2021"
description = "Cryptographic hashing skill for VAK - supports SHA-256, SHA-512, and BLAKE3"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = []

