[package]
name = "json-validator"
version = "0.1.0"
edition = "2021"
description = "JSON validation and transformation skill for VAK"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = []

