[package]
name = "text-analyzer"
version = "0.1.0"
edition = "2021"
description = "Text analysis skill for VAK - word count, character frequency, similarity"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = []

